--- a/script.ipynb
+++ b/script.ipynb
@@ -20,8 +20,7 @@
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from tensorflow.keras import models,regularizers\n",
     "from tensorflow.keras import layers\n",
-    "%matplotlib inline\n",
-    "#pip install libav-tools"
+    "%matplotlib inline"
    ]
   },
   {
