--- a/script.ipynb
+++ b/script.ipynb
@@ -101,8 +101,7 @@
     "    print(label, path)\n",
     "\n",
     "for i in range(len(dataFrames)):\n",
-    "    print(dataFrames[i])\n",
-    "#print(dataFrames[5])"
+    "    print(dataFrames[i])"
    ]
   },
   {
@@ -522,7 +521,7 @@
    ],
    "source": [
     "# Function for extracting the mffcs which we will use as features for the task\n",
-    "# Inspired by and based upon https://www.analyticsvidhya.com/blog/2017/08/audio-voice-processing-deep-learning/ in nr # in our appendix\n",
+    "# Inspired by and based upon https://www.analyticsvidhya.com/blog/2017/08/audio-voice-processing-deep-learning/\n",
     "\n",
     "def feature_extract(row):\n",
     "    # Getting the full path\n",
@@ -537,13 +536,10 @@
     "\n",
     "    feature = mfccs\n",
     "    label = row.label\n",
-    "\n",
     "    return [feature, label]\n",
     "\n",
     "tempTrain = train_df.apply(feature_extract, axis=1) # Our new df holding the data with extracted features\n",
     "print(tempTrain[:10])\n",
-    "\n",
-    "print(\"TESTDATA\")\n",
     "\n",
     "tempTest = test_df.apply(feature_extract, axis=1)\n",
     "print(tempTest[:10])"
@@ -1695,7 +1691,6 @@
    "source": [
     "# Converting the training features and test features to a numpy array \n",
     "X_train = np.array(X_train)\n",
-    "\n",
     "X_test = np.array(X_test)\n",
     "\n",
     "print(X_train.shape)\n",
@@ -2132,7 +2127,7 @@
   {
    "source": [
     "### From the loss graph\n",
-    "we can observe that there seems to be neither overfit nor underfit, the training and validation loss is very similar. Again, our theory for why the results are\n",
+    "we can observe that there seems to be neither overfit nor underfit, the training and validation loss is very similar indicating a good fitting model. Again, our theory for why the results are\n",
     "so overwhelmigly good is that our dataset is very clean, and differrences are easily observable, and in our case we think this makes it \"easy\" for the algorithms to predict. "
    ],
    "cell_type": "markdown",
